# Reed-Solomon

./: CMakeLists.txt  ReedSolomon.cpp  ReedSolomon.h  main.cpp
